--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -171,7 +171,7 @@
   "afiliado": {
     "trigger": "2. Configurar Afiliado (Marketplace)",
     "steps": {
-      "admin": "No VTEX Admin, vá em Configurações da Loja → Pedidos → Configurações.",
+      "admin": "No VTEX Admin, vá em Configurações da Loja → Pedidos → Configurações ou acesse: ",
       "tab": "Acesse a aba Afiliados.",
       "new": "Clique em Novo Afiliado.",
       "fields": "Preencha os campos:",
